@@ -15,6 +15,9 @@ Core and builtins
 Extension Modules
 -----------------
 
+- Calling Tk_Init twice is refused if the first call failed as that
+  may deadlock.
+
 - Patch #1191065: Fix preprocessor problems on systems where recvfrom
   is a macro.
 
